# umeal-se

./: .gitignore  .pre-commit-config.yaml  LICENSE.rst  docker-compose.yaml  pyproject.toml
main/: settings.py  urls.py
umealse/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
umealse/migrations/: 0001_initial.py  0002_rename_author_event_host_alter_event_attendees.py  0003_event_tags.py  0004_alter_event_tags_profile.py  0005_profile_friends_friendship.py
umealse/templates/: base.html  landing_page.html  pagination.html
umealse/templates/account/: dashboard.html  edit_profile.html  profile.html  register.html  register_done.html
umealse/templates/event/: add_event.html  detail.html  list.html
umealse/templates/registration/: logged_out.html  login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  register_done.html
umealse/templates/umealse/: base.html
umealse/templates/umealse/account/: dashboard.html
umealse/templates/umealse/event/: detail.html  list.html
umealse/tests/: test_account.py  test_base.py  test_event.py
